kubernetes/cattle-system/rancher/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher
  namespace: cattle-system
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '30'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '1800'
spec:
  ingressClassName: internal
  rules:
    - host: rancher.abchost.nl
      http:
        paths:
          - backend:
              service:
                name: rancher
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
